# B3D

./: .travis.yml  CMakeLists.txt
source/src/B3D_cudaCompress/: Encode.cpp  HuffmanDesign.h  Instance.cpp  InstanceImpl.cpp  InstanceImpl.h  Timing.cpp
source/src/B3D_cudaCompress/CPU/: ArithmeticCPU.cpp  EncodeCPU.cpp  EncoderTestSuite.cpp  GolombRiceCPU.cpp  HuffmanTableCPU.cpp  QuantizeCPU.cpp  RBUCCPU.cpp  YCoCgCPU.cpp
source/src/B3D_cudaCompress/reduce/: reduce_plan.cpp
